--- a/Ramble/en.lproj/MainStoryboard.storyboard
+++ b/Ramble/en.lproj/MainStoryboard.storyboard
@@ -18,34 +18,31 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                             </view>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="5cG-nN-6LN">
-                                <rect key="frame" x="20" y="403" width="72" height="37"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="5cG-nN-6LN">
+                                <rect key="frame" x="0.0" y="410" width="50" height="50"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                <state key="normal">
+                                <state key="normal" backgroundImage="bottomleftup.png">
                                     <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
-                                <state key="highlighted">
+                                <state key="highlighted" backgroundImage="bottomleftdown.png">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
-                                <connections>
-                                    <action selector="tableViewButtonPressed:" destination="2" eventType="touchUpInside" id="905-bk-MFs"/>
-                                </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="mda-4j-iHA">
-                                <rect key="frame" x="228" y="403" width="72" height="37"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="mda-4j-iHA">
+                                <rect key="frame" x="270" y="410" width="50" height="50"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                <state key="normal">
+                                <state key="normal" backgroundImage="bottomrightup.png">
                                     <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
-                                <state key="highlighted">
+                                <state key="highlighted" backgroundImage="bottomrightdown.png">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <action selector="cameraViewButtonPressed:" destination="2" eventType="touchUpInside" id="BBu-Qo-ZLe"/>
+                                    <action selector="toggleViewButtonPressed:" destination="2" eventType="touchUpInside" id="VvC-sq-9pU"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -105,9 +102,9 @@
         <scene sceneID="vtA-0w-14H">
             <objects>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qwp-77-UrK" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <tableViewController id="4Xt-Pu-qX1" customClass="NewsFeedTableViewController" sceneMemberID="viewController">
+                <tableViewController storyboardIdentifier="FeedViewController" id="4Xt-Pu-qX1" customClass="NewsFeedTableViewController" sceneMemberID="viewController">
                     <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="CnB-a5-eFn">
-                        <rect key="frame" x="0.0" y="64" width="320" height="416"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
@@ -119,9 +116,6 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 </view>
-                                <connections>
-                                    <segue destination="Nif-Gi-iJw" kind="push" id="hew-8z-65K"/>
-                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -138,7 +132,21 @@
                     </navigationItem>
                 </tableViewController>
             </objects>
-            <point key="canvasLocation" x="1237" y="610"/>
+            <point key="canvasLocation" x="703" y="540"/>
+        </scene>
+        <scene sceneID="JN2-CB-6Xv">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="HEO-bD-oms" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <navigationController storyboardIdentifier="LocalTracksViewController" definesPresentationContext="YES" id="Y67-cL-NeY" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="NL6-0o-4Ly">
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="Nif-Gi-iJw" kind="relationship" relationship="rootViewController" id="94A-l8-RID"/>
+                    </connections>
+                </navigationController>
+            </objects>
+            <point key="canvasLocation" x="1243" y="-100"/>
         </scene>
         <scene sceneID="6jE-BF-awP">
             <objects>
@@ -158,7 +166,7 @@
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 </view>
                                 <connections>
-                                    <segue destination="cjV-ov-Q4n" kind="push" id="m0O-tL-GDJ"/>
+                                    <segue destination="cjV-ov-Q4n" kind="push" id="JHs-jt-KSt"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -176,7 +184,7 @@
                     </navigationItem>
                 </tableViewController>
             </objects>
-            <point key="canvasLocation" x="1762" y="610"/>
+            <point key="canvasLocation" x="1794" y="-100"/>
         </scene>
         <scene sceneID="ext-zI-oWj">
             <objects>
@@ -288,7 +296,7 @@
                     </connections>
                 </viewController>
             </objects>
-            <point key="canvasLocation" x="2261" y="610"/>
+            <point key="canvasLocation" x="2289" y="-100"/>
         </scene>
         <scene sceneID="ztD-IF-EhV">
             <objects>
@@ -407,36 +415,13 @@
             </objects>
             <point key="canvasLocation" x="167" y="859"/>
         </scene>
-        <scene sceneID="Qn1-u2-B0P">
-            <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="B41-Ow-dGI" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <navigationController storyboardIdentifier="NavController" definesPresentationContext="YES" id="P1I-x7-8H2" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="ECU-pv-R9Q">
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <connections>
-                        <segue destination="4Xt-Pu-qX1" kind="relationship" relationship="rootViewController" id="2wD-QU-JC7"/>
-                    </connections>
-                </navigationController>
-            </objects>
-            <point key="canvasLocation" x="703" y="610"/>
-        </scene>
-        <scene sceneID="0Zk-IV-WKM">
-            <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="mcf-WV-6JW" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <viewController title="Future Map View Controller" id="yJo-ww-5Xa" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="JUR-p4-Fc1">
-                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                    </view>
-                </viewController>
-            </objects>
-            <point key="canvasLocation" x="1237" y="1303"/>
-        </scene>
     </scenes>
     <resources>
         <image name="Compass.png" width="300" height="288"/>
+        <image name="bottomleftdown.png" width="99" height="103"/>
+        <image name="bottomleftup.png" width="99" height="103"/>
+        <image name="bottomrightdown.png" width="99" height="102"/>
+        <image name="bottomrightup.png" width="99" height="102"/>
     </resources>
     <classes>
         <class className="CaptureViewController" superclassName="UIViewController">
@@ -452,6 +437,7 @@
             <source key="sourceIdentifier" type="project" relativePath="./Classes/LocalTracksTableViewController.h"/>
             <relationships>
                 <relationship kind="action" name="prefsButtonPressed:"/>
+                <relationship kind="outlet" name="tblCell" candidateClass="TrackListItem"/>
             </relationships>
         </class>
         <class className="NewsFeedTableViewController" superclassName="UITableViewController">
@@ -477,8 +463,8 @@
         <class className="RootViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/RootViewController.h"/>
             <relationships>
-                <relationship kind="action" name="cameraViewButtonPressed:"/>
-                <relationship kind="action" name="tableViewButtonPressed:"/>
+                <relationship kind="action" name="recentCaptureViewButtonPressed:"/>
+                <relationship kind="action" name="toggleViewButtonPressed:"/>
                 <relationship kind="outlet" name="subView" candidateClass="UIView"/>
             </relationships>
         </class>
@@ -494,6 +480,15 @@
                 <relationship kind="outlet" name="uploadProgress" candidateClass="UIProgressView"/>
                 <relationship kind="outlet" name="uploadStatusLabel" candidateClass="UILabel"/>
                 <relationship kind="outlet" name="uploadView" candidateClass="UIView"/>
+            </relationships>
+        </class>
+        <class className="TrackListItem" superclassName="UITableViewCell">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/TrackListItem.h"/>
+            <relationships>
+                <relationship kind="outlet" name="dateCaptured" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="dateTaken" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="thumbnailImage" candidateClass="UIImageView"/>
+                <relationship kind="outlet" name="title" candidateClass="UILabel"/>
             </relationships>
         </class>
     </classes>
