--- a/Ramble/en.lproj/MainStoryboard.storyboard
+++ b/Ramble/en.lproj/MainStoryboard.storyboard
@@ -29,6 +29,9 @@
                                 <state key="highlighted" backgroundImage="bottomleftdown.png">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="recentCaptureViewButtonPressed:" destination="2" eventType="touchUpInside" id="Fti-Ex-BrQ"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="mda-4j-iHA">
                                 <rect key="frame" x="270" y="410" width="50" height="50"/>
@@ -104,7 +107,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qwp-77-UrK" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <tableViewController storyboardIdentifier="FeedViewController" id="4Xt-Pu-qX1" customClass="NewsFeedTableViewController" sceneMemberID="viewController">
                     <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="CnB-a5-eFn">
-                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
+                        <rect key="frame" x="0.0" y="64" width="320" height="416"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
@@ -130,6 +133,7 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                 </tableViewController>
             </objects>
             <point key="canvasLocation" x="703" y="540"/>
@@ -176,9 +180,9 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="Vids" id="ICp-E5-XSB">
-                        <barButtonItem key="rightBarButtonItem" title="Prefs" id="a4H-Bz-cJF">
+                        <barButtonItem key="rightBarButtonItem" title="Done" style="done" id="a4H-Bz-cJF">
                             <connections>
-                                <action selector="prefsButtonPressed:" destination="Nif-Gi-iJw" id="AA3-jf-XTM"/>
+                                <action selector="doneButtonPressed:" destination="Nif-Gi-iJw" id="wB7-NM-Y3O"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -281,9 +285,9 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                     <navigationItem key="navigationItem" id="ewG-lM-Cs5">
-                        <barButtonItem key="rightBarButtonItem" title="Prefs" id="IrF-2a-6Wf">
+                        <barButtonItem key="rightBarButtonItem" title="Done" style="done" id="IrF-2a-6Wf">
                             <connections>
-                                <action selector="prefsButtonPressed:" destination="cjV-ov-Q4n" id="lkS-tZ-XHk"/>
+                                <action selector="doneButtonPressed:" destination="cjV-ov-Q4n" id="DGF-32-lMs"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -423,75 +427,6 @@
         <image name="bottomrightdown.png" width="99" height="102"/>
         <image name="bottomrightup.png" width="99" height="102"/>
     </resources>
-    <classes>
-        <class className="CaptureViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/CaptureViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="recordButtonPressed:"/>
-                <relationship kind="outlet" name="compassImage" candidateClass="UIImageView"/>
-                <relationship kind="outlet" name="recordButton" candidateClass="UIButton"/>
-                <relationship kind="outlet" name="videoPreviewView" candidateClass="UIView"/>
-            </relationships>
-        </class>
-        <class className="LocalTracksTableViewController" superclassName="UITableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/LocalTracksTableViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="prefsButtonPressed:"/>
-                <relationship kind="outlet" name="tblCell" candidateClass="TrackListItem"/>
-            </relationships>
-        </class>
-        <class className="NewsFeedTableViewController" superclassName="UITableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/NewsFeedTableViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="prefsButtonPressed:"/>
-            </relationships>
-        </class>
-        <class className="PreferencesViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/PreferencesViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="doneButtonPressed:"/>
-                <relationship kind="action" name="headingSelectorDidChange:"/>
-                <relationship kind="action" name="launchScreenSwitchDidChange:"/>
-                <relationship kind="action" name="locationModeSwitchDidChange:"/>
-                <relationship kind="action" name="logInButtonPressed:"/>
-                <relationship kind="outlet" name="headingSelector" candidateClass="UISegmentedControl"/>
-                <relationship kind="outlet" name="launchScreenSwitch" candidateClass="UISwitch"/>
-                <relationship kind="outlet" name="locationModeSwitch" candidateClass="UISwitch"/>
-                <relationship kind="outlet" name="logInButton" candidateClass="UIButton"/>
-            </relationships>
-        </class>
-        <class className="RootViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/RootViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="recentCaptureViewButtonPressed:"/>
-                <relationship kind="action" name="toggleViewButtonPressed:"/>
-                <relationship kind="outlet" name="subView" candidateClass="UIView"/>
-            </relationships>
-        </class>
-        <class className="TrackDetailViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/TrackDetailViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="actionButtonPressed:"/>
-                <relationship kind="action" name="cancelButtonPressed:"/>
-                <relationship kind="action" name="prefsButtonPressed:"/>
-                <relationship kind="action" name="uploadButtonPressed:"/>
-                <relationship kind="outlet" name="actionButton" candidateClass="UIButton"/>
-                <relationship kind="outlet" name="titleLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="uploadProgress" candidateClass="UIProgressView"/>
-                <relationship kind="outlet" name="uploadStatusLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="uploadView" candidateClass="UIView"/>
-            </relationships>
-        </class>
-        <class className="TrackListItem" superclassName="UITableViewCell">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/TrackListItem.h"/>
-            <relationships>
-                <relationship kind="outlet" name="dateCaptured" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="dateTaken" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="thumbnailImage" candidateClass="UIImageView"/>
-                <relationship kind="outlet" name="title" candidateClass="UILabel"/>
-            </relationships>
-        </class>
-    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
