--- a/Ramble/en.lproj/MainStoryboard.storyboard
+++ b/Ramble/en.lproj/MainStoryboard.storyboard
@@ -102,41 +102,18 @@
             </objects>
             <point key="canvasLocation" x="703" y="-100"/>
         </scene>
-        <scene sceneID="vtA-0w-14H">
+        <scene sceneID="2Ch-KN-Oaf">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="qwp-77-UrK" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <tableViewController storyboardIdentifier="FeedViewController" id="4Xt-Pu-qX1" customClass="NewsFeedTableViewController" sceneMemberID="viewController">
-                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="CnB-a5-eFn">
-                        <rect key="frame" x="0.0" y="64" width="320" height="416"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="LocalAlbum" id="8ko-zM-3aT">
-                                <rect key="frame" x="0.0" y="22" width="320" height="44"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                    <rect key="frame" x="0.0" y="0.0" width="300" height="43"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                </view>
-                            </tableViewCell>
-                        </prototypes>
-                        <connections>
-                            <outlet property="dataSource" destination="4Xt-Pu-qX1" id="5Fu-IH-0Qr"/>
-                            <outlet property="delegate" destination="4Xt-Pu-qX1" id="M1R-Ya-zBV"/>
-                        </connections>
-                    </tableView>
-                    <navigationItem key="navigationItem" title="Feed" id="GpS-Dg-ZbY">
-                        <barButtonItem key="rightBarButtonItem" title="Prefs" id="mf9-vg-Hip">
-                            <connections>
-                                <action selector="prefsButtonPressed:" destination="4Xt-Pu-qX1" id="zSP-16-0iW"/>
-                            </connections>
-                        </barButtonItem>
-                    </navigationItem>
-                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
-                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="FYo-4C-w11" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewController storyboardIdentifier="FeedViewController" id="l2J-xt-vz1" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="dES-2D-nkj">
+                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
             </objects>
-            <point key="canvasLocation" x="703" y="540"/>
+            <point key="canvasLocation" x="703" y="538"/>
         </scene>
         <scene sceneID="JN2-CB-6Xv">
             <objects>
@@ -427,6 +404,71 @@
         <image name="bottomrightdown.png" width="99" height="102"/>
         <image name="bottomrightup.png" width="99" height="102"/>
     </resources>
+    <classes>
+        <class className="CaptureViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/CaptureViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="recordButtonPressed:"/>
+                <relationship kind="outlet" name="compassImage" candidateClass="UIImageView"/>
+                <relationship kind="outlet" name="recordButton" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="videoPreviewView" candidateClass="UIView"/>
+            </relationships>
+        </class>
+        <class className="LocalTracksTableViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/LocalTracksTableViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="doneButtonPressed:"/>
+                <relationship kind="action" name="prefsButtonPressed:"/>
+                <relationship kind="outlet" name="tblCell" candidateClass="TrackListItem"/>
+            </relationships>
+        </class>
+        <class className="PreferencesViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/PreferencesViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="doneButtonPressed:"/>
+                <relationship kind="action" name="headingSelectorDidChange:"/>
+                <relationship kind="action" name="launchScreenSwitchDidChange:"/>
+                <relationship kind="action" name="locationModeSwitchDidChange:"/>
+                <relationship kind="action" name="logInButtonPressed:"/>
+                <relationship kind="outlet" name="headingSelector" candidateClass="UISegmentedControl"/>
+                <relationship kind="outlet" name="launchScreenSwitch" candidateClass="UISwitch"/>
+                <relationship kind="outlet" name="locationModeSwitch" candidateClass="UISwitch"/>
+                <relationship kind="outlet" name="logInButton" candidateClass="UIButton"/>
+            </relationships>
+        </class>
+        <class className="RootViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/RootViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="recentCaptureViewButtonPressed:"/>
+                <relationship kind="action" name="toggleViewButtonPressed:"/>
+                <relationship kind="outlet" name="subView" candidateClass="UIView"/>
+            </relationships>
+        </class>
+        <class className="TrackDetailViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/TrackDetailViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="actionButtonPressed:"/>
+                <relationship kind="action" name="cancelButtonPressed:"/>
+                <relationship kind="action" name="doneButtonPressed:"/>
+                <relationship kind="action" name="prefsButtonPressed:"/>
+                <relationship kind="action" name="uploadButtonPressed:"/>
+                <relationship kind="outlet" name="actionButton" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="titleLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="uploadProgress" candidateClass="UIProgressView"/>
+                <relationship kind="outlet" name="uploadStatusLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="uploadView" candidateClass="UIView"/>
+            </relationships>
+        </class>
+        <class className="TrackListItem" superclassName="UITableViewCell">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/TrackListItem.h"/>
+            <relationships>
+                <relationship kind="outlet" name="dateCaptured" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="dateTaken" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="thumbnailImage" candidateClass="UIImageView"/>
+                <relationship kind="outlet" name="title" candidateClass="UILabel"/>
+            </relationships>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
